# LLM-Investor

./: README.md  pyproject.toml
notebooks/: demoGPTInvestor.ipynb
src/: main.py
src/features/: stock_data.py
src/model/: investment_strategy.py
src/utils/: logging_config.py  visualization.py
