[tool.poetry]
name = "gptinvestor"
version = "0.1.0"
description = ""
authors = ["Adrian Infantes <infantesromeroadrian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
openai = "^1.51.2"
requests = "^2.32.3"
matplotlib = "^3.9.2"
taipy = "^4.0.0"
pandas = "2.2.2"
streamlit = "^1.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
